--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="save">Сохранить задачу</string>
     <string name="name_task">Название задачи</string>
     <string name="description_task">Описание задачи</string>
+    <string name="no_tasks">Задачи отсутствуют</string>
 </resources>
